@@ -5,7 +5,7 @@ data/add_friend_dlg.xml
 data/account_dlg.xml
 data/main_window.glade
 data/prefs_dlg.xml
-data/send_message_dialog.glade
+data/send_message_dlg.xml
 data/spell_dlg.xml
 data/tray_menu.glade
 data/twitux.desktop.in.in
